# willow-avif

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  nopesetup.py  noxfile.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  will.py
.circleci/: config.yml
.github/: dependabot.yml
src/willowavif/: AvifPlugin.py  __init__.py
tests/: test.py
tests/from/: test.avif
