[project]
name = "willowavif"
version = "0.0.1"
description = "AVIF support for williow"
authors = [
    {name = "Ben Gosney", email = "bengosney@googlemail.com"},
]

[build-system]
requires = ["setuptools", "wheel", "Pillow", "Willow", "pillow-avif-plugin"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py36']

[tool.pycln]
all = true
